--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -93,16 +93,23 @@ a{
     padding-bottom: 15px;
 }
 
+.aside-wrapper{
+    width: 345px;
+    overflow: hidden;
+    position: fixed;
+    right: 0;
+    top: 36%;
+    z-index: 5;
+}
+
 .aside-fixed{
     background-color: #fffaab;
     width: 45px;
     height: 256px;
-    position: absolute;
+    position: relative;
     right: 0px;
-    z-index: 10;
-    top: 11%;
-    cursor: pointer;
-    box-shadow: 0px 2px 15px 10px rgba(50, 50, 50, 0.14);
+    z-index: 5;
+    margin-left: 87%;
 }
 
 .fixed-item{
@@ -110,19 +117,27 @@ a{
     height: 80px;
     background-color: #ffffff;
     padding: 13px;
-    position: relative;
-    left: -300px;
-    top: -24px;
+    position: absolute;
+    left: 228px;
+    top: 0px;
     margin-bottom: 8px;
     border-radius: 5px 0 0 5px;
     box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
     transition: 1s;
 }
 
-/* .fixed-item:hover{
-    left: -300px;
+.fixed-item:nth-child(2){
+    top: 90px;
+}
+
+.fixed-item:nth-child(3){
+    top: 180px;
+}
+
+.fixed-item:hover{
+    left: 0px;
     transition: 1s;
-} */
+}
 
 .fixed-item img{
     width: 48px;
@@ -186,7 +201,7 @@ a{
     border-radius: 30px;
     background: #ffffff;
     color: #843f8a;
-    font-weight: bold;
+    font-weight: 700;
     cursor: pointer;
 }
 
@@ -240,14 +255,14 @@ a{
     border-radius: 30px;
     background: #ffffff;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 700;
     border: 1px solid #c4c4c4;
     color: #757575;
 }
 
 .phone{
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     color: #4e4e4e;
     margin-top: 10px;
@@ -291,7 +306,7 @@ a{
 .first-menu-item a{
     color: #ffffff;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .main-text{
@@ -304,7 +319,7 @@ a{
 }
 
 .main-text > p:nth-child(2){
-    font-weight: bold;
+    font-weight: 700;
     margin-top: 15px;
 }
 
@@ -319,7 +334,6 @@ a{
 
 .sale{
     background-color: #752a7e;
-    height: 165px;
     margin-top: 65px;
     margin-bottom: 65px;
     box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
@@ -330,7 +344,7 @@ a{
 }
 
 .sale span{
-    font-weight: bold;
+    font-weight: 700;
 }
 
 input,
@@ -345,7 +359,7 @@ button{
 .about-item{
     width: 100%;
     max-width: 435px;
-    margin-bottom: 50px;
+    margin-bottom: 9%;
     padding-right: 10px;
 }
 
@@ -356,7 +370,7 @@ button{
 
 .about-header{
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: 10px;
 }
 
@@ -365,6 +379,8 @@ button{
     max-width: 295px;
     border: 1px solid #d4d4d4;
     margin-left: 10px;
+    height: max-content;
+    padding-bottom: 5px;
 }
 
 .aside a{
@@ -380,7 +396,7 @@ button{
     display: block;
     font-size: 24px;
     color: #626262;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -388,7 +404,7 @@ button{
 }
 
 p span{
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .cart{
@@ -417,12 +433,13 @@ p span{
 .about-info{
     font-size: 20px;
     margin-bottom: 40px;
+    letter-spacing: 0.5px;
 }
 
 .sub-title{
     font-size: 30px;
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: 30px;
     color: #626262;
 }
@@ -457,7 +474,7 @@ p span{
     text-align: center;
     color: #626262;
     font-size: 25px;
-    font-weight: bold;
+    font-weight: 700;
     cursor: pointer;
     padding-top: 20px;
     margin-top: 45px;
@@ -499,7 +516,14 @@ p span{
     color: #ffffff;
     position: relative;
     top: 35px;
-    font-weight: bold;
+    font-weight: 700;
+    box-shadow: 0px 5px 1px 0px rgba(50, 50, 50, 0.1);
+}
+
+.show-all_second-section{
+    position: absolute;
+    left: 25%;
+    top: 0px;
 }
 
 .show-all_green{
@@ -512,6 +536,18 @@ p span{
 
 .show-all_red{
     background-color: #ef5647;
+}
+
+.show-all_purple{
+    background-color: #8b5ce3;
+}
+
+.show-all_pink{
+    background-color: #f26fa0;
+}
+
+.show-all_blue{
+    background-color: #2db5bd;
 }
 
 .gallery-item{
@@ -627,7 +663,7 @@ p span{
     width: 290px;
     height: 80px;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 700;
     color: #626262;
     text-align: center;
     padding-top: 25px;
@@ -642,6 +678,7 @@ p span{
 
 .season-img-wrapper{
     margin-left: -5px;
+    position: relative;
 }
 
 .square{
@@ -649,7 +686,7 @@ p span{
     height: 118px;
     background-color: #ffffff;
     color: #7f45e7;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     position: absolute;
     top: 26px;
@@ -697,6 +734,7 @@ p span{
 
 .logo{
     margin-right: 25px;
+    margin-bottom: 15px;
 }
 
 .logo-footer{
@@ -706,6 +744,7 @@ p span{
 
 footer{
     padding-bottom: 120px;
+    margin-top: 60px;
 }
 
 .footer-item{
