--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -698,23 +698,29 @@ p span{
     position: relative;
 }
 
+.seasons-block img{
+    width: 100%;
+    height: auto;
+}
+
 .season-img-wrapper{
     margin-left: -5px;
     position: relative;
 }
 
 .square{
-    width: 118px;
-    height: 118px;
+    width: 28%;
+    height: 65%;
     background-color: #ffffff;
     color: #7f45e7;
     font-weight: 700;
     text-align: center;
     position: absolute;
-    top: 26px;
-    left: 160px;
+    top: 16%;
+    left: 36%;
     line-height: 20px;
     letter-spacing: 1px;
+    padding-top: 6%;
 }
 
 .season-item{
@@ -922,6 +928,40 @@ footer{
     .show-all{
         width: 100%;
         max-width: 290px;
+    }
+    .square{
+        font-size: 10px;
+        line-height: 13px;
+        padding: 6% 1% 0 1%;;
+    }
+    .season-item{
+        margin-bottom: 0px;
+    }
+    .show-all_second-section{
+        position: static;
+        left: 0px;
+        margin: 0 auto;
+        display: block;
+        margin-top: 25px;
+        margin-bottom: 30px;
+        width: 230px;
+        height: 45px;
+    }
+    .season-img-wrapper img,
+    .season-toggle{
+        display: none;
+    }
+    .seasons-content div{
+        justify-content: center;
+    }
+    .seasons-content .pink,
+    .seasons-content .purple,
+    .seasons-content .blue{
+        background-color: #ffffff;
+        border-top: none;
+    }
+    .seasons-content{
+        display: block;
     }
 }
 
