--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -153,13 +153,12 @@ a{
     padding-left: 55px;
 }
 
-.owl-theme .owl-dots{
+.slide-one .owl-dots{
     position: relative;
-    bottom: 65px;
-    
+    bottom: 30px;
 }
 
-.owl-theme .owl-dots .owl-dot span{
+.slide-one .owl-dots .owl-dot span{
     box-shadow: inset 0px 1px 1px 1px rgba(50, 50, 50, 0.75);
 }
 
@@ -229,6 +228,11 @@ a{
     top: 35px;
     left: -15px;
     padding: 15px 5px 15px 5px;
+}
+
+.menu{
+    width: 55%;
+    font-size: 10px;
 }
 
 .info-container .flex{
@@ -472,7 +476,7 @@ p span{
     font-weight: 700;
     cursor: pointer;
     padding-top: 20px;
-    margin-top: 45px;
+    margin-top: 25px;
     position: relative;
     top: 5px;
 }
@@ -484,10 +488,60 @@ p span{
     margin-bottom: 70px;
 }
 
-.gallery-container div div.owl-nav{
+.slide-two .owl-nav,
+.slide-one .owl-nav{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    margin-top: 0px;
+    width: 100%;
+}
+
+.slide-one .owl-nav .owl-prev{
+    position: absolute;
+    right: 80%
+} 
+
+.slide-one .owl-nav .owl-next{
+    position: absolute;
+    left: 80%
+} 
+
+.slide-one .owl-nav button span,
+.slide-two .owl-nav button span{
+    width: 30px;
+    height: 65px;
+    display: block;
+    background-repeat: no-repeat;
+    color: transparent;
+}
+
+.slide-one .owl-nav button.owl-prev span{
+    background-image: url(../img/right-arrow.png);
+}
+
+.slide-one .owl-nav button.owl-next span{
+    background-image: url(../img/right-arrow.png);
+    transform: rotate(180deg);
+}
+
+.slide-two .owl-nav .owl-prev{
+    position: absolute;
+    right: 96%;
+} 
+
+.slide-two .owl-nav .owl-next{
+    position: absolute;
+    left: 96%;
+    bottom: -48px;
+} 
+
+.slide-two .owl-nav button.owl-prev span{
+    background-image: url(../img/next.png);
+}
+
+.slide-two .owl-nav button.owl-next span{
+    background-image: url(../img/next.png);
+    transform: rotate(180deg);
 }
 
 .container-green{
@@ -552,10 +606,6 @@ p span{
     width: 100%;
     max-width: 290px;
     margin: 0 auto;
-}
-
-.slide-one{
-    margin-bottom: 20px;
 }
 
 .slide-two{
@@ -820,12 +870,17 @@ footer{
     letter-spacing: 1px;
 }
 
+
+
 @media screen and (min-width: 950px){
     .toggle-text{
         display: none;
     }
     .mobile-button{
         display: none;
+    }
+    .slide-three .owl-stage-outer{
+    overflow: visible;
     }
 }
 
@@ -963,8 +1018,16 @@ footer{
     }
     .slide-three .owl-nav{
         position: absolute;
-        top: -80%;
-        left: 50%;
+        top: -90%;
+        width: 100%;
+    }
+    .slide-three .owl-nav .owl-prev{
+        right: 101%;
+        position: absolute;
+    }
+    .slide-three .owl-nav .owl-next{
+        left: 95%;
+        position: absolute;
     }
     footer .footer-content .footer-item{
         border: 2px solid #b8b8b8;
@@ -994,6 +1057,17 @@ footer{
     }
     footer .borders{
         margin-bottom: 50px;
+    }
+    .slide-two .owl-nav .owl-prev{
+        right: 63%;
+    } 
+    
+    .slide-two .owl-nav .owl-next{
+        left: 63%;
+    }
+    .menu{
+        display: block;
+        font-size: 13px;
     }
 }
 
