--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -163,6 +163,15 @@ header{
     bottom: 30px;
 }
 
+.slider-item{
+    width: 100%;
+    height: 400px;
+    max-height: 430px;
+    background-image: url(../img/main-banner.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 .slide-one .owl-dots .owl-dot span{
     box-shadow: inset 0px 1px 1px 1px rgba(50, 50, 50, 0.75);
 }
@@ -1122,8 +1131,8 @@ footer{
         top: 20px;
         transform: rotate(270deg);
     }
-    .footer-header.active ~ .footer-arrow{
-        transform: rotate(90deg);
+    .footer-header.active ~ .img{
+        transform: rotate(360deg);
     }
     .footer-content{
         justify-content: center;
@@ -1247,5 +1256,8 @@ footer{
     }
     .slide-one{
         margin-bottom: 20px;
+    }
+    .slider-item{
+        height: 20vh;
     }
 }
