--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -1224,7 +1224,7 @@ footer{
         margin-right: 35px;
     }
     .header-top ul li{
-        margin-right: 30px;
+        margin-right: 37px;
     }
     .aside{
         position: fixed;
@@ -1292,8 +1292,9 @@ footer{
     }
     .slider-button{
         max-width: 200px;
+        width: 25%;
         height: 40px;
-        font-size: 20px;
+        font-size: 15px;
         letter-spacing: 0px;
     }
     .content-footer.active + .footer-arrow{
