--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -36,7 +36,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html{
@@ -59,23 +60,32 @@ body{
 }
 
 .flex{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .wrap{
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .jc-center{
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .jc-between{
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .align-cent{
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 ul{
@@ -127,7 +137,10 @@ header{
     top: 0px;
     margin-bottom: 8px;
     border-radius: 5px 0 0 5px;
-    box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
+    -webkit-box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
+            box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
 }
 
@@ -141,6 +154,8 @@ header{
 
 .fixed-item:hover{
     left: 0px;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
 }
 
@@ -152,7 +167,9 @@ header{
 
 .aside-fixed p{
     font-family: "adineuePRO-bold";
-    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
     font-size: 22px;
     color: #843f8a;
     padding-left: 55px;
@@ -173,12 +190,15 @@ header{
 }
 
 .slide-one .owl-dots .owl-dot span{
-    box-shadow: inset 0px 1px 1px 1px rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: inset 0px 1px 1px 1px rgba(50, 50, 50, 0.75);
+            box-shadow: inset 0px 1px 1px 1px rgba(50, 50, 50, 0.75);
 }
 
 .first{
     width: 500px;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     background-color: #843f8a;
     height: 50px;
     padding-right: 15px;
@@ -423,7 +443,8 @@ button{
 }
 
 .about-item img{
-    box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.27);
+    -webkit-box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.27);
+            box-shadow: 0px 7px 29px 0px rgba(0, 0, 0, 0.27);
     margin-right: 20px;
 }
 
@@ -432,7 +453,9 @@ button{
 }
 
 .rotate-text{
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
 }
 
 .about-header{
@@ -446,6 +469,8 @@ button{
     max-width: 295px;
     border: 1px solid #d4d4d4;
     margin-left: 10px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
     height: max-content;
     padding-bottom: 5px;
 }
@@ -596,7 +621,9 @@ p span{
 
 .slide-one .owl-nav button.owl-next span{
     background-image: url(../img/right-arrow.png);
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
 }
 
 .slide-two .owl-nav .owl-prev{
@@ -616,20 +643,28 @@ p span{
 
 .slide-two .owl-nav button.owl-next span{
     background-image: url(../img/next.png);
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
 }
 
 .container-green{
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(235,253,223,1)), color-stop(51%, rgba(255,255,255,1)));
+    background: -o-linear-gradient(top, rgba(235,253,223,1) 0%, rgba(255,255,255,1) 51%);
     background: linear-gradient(180deg, rgba(235,253,223,1) 0%, rgba(255,255,255,1) 51%);
     border: 5px solid #52bb6a;
 }
 
 .container-yellow{
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,190,1)), color-stop(51%, rgba(255,255,255,1)));
+    background: -o-linear-gradient(top, rgba(255,255,190,1) 0%, rgba(255,255,255,1) 51%);
     background: linear-gradient(180deg, rgba(255,255,190,1) 0%, rgba(255,255,255,1) 51%);
     border: 5px solid #ffde00;
 }
 
 .container-red{
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255,204,199,1)), color-stop(51%, rgba(255,255,255,1)));
+    background: -o-linear-gradient(top, rgba(255,204,199,1) 0%, rgba(255,255,255,1) 51%);
     background: linear-gradient(180deg, rgba(255,204,199,1) 0%, rgba(255,255,255,1) 51%);
     border: 5px solid #ef5647;
 }
@@ -644,7 +679,8 @@ p span{
     position: relative;
     top: 35px;
     font-weight: 700;
-    box-shadow: 0px 5px 1px 0px rgba(50, 50, 50, 0.1);
+    -webkit-box-shadow: 0px 5px 1px 0px rgba(50, 50, 50, 0.1);
+            box-shadow: 0px 5px 1px 0px rgba(50, 50, 50, 0.1);
 }
 
 .show-all_second-section{
@@ -886,7 +922,8 @@ p span{
     margin-left: auto;
     margin-top: 65px;
     margin-bottom: 65px;
-    box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
+    -webkit-box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
+            box-shadow: 0px 2px 150px 10px rgba(50, 50, 50, 0.14);
     color: #ffffff;
     font-size: 74px;
     letter-spacing: 2px;
@@ -993,8 +1030,11 @@ footer{
 
 @media screen and (max-width: 950px){
     .header-middle {
-        flex-wrap: wrap;
-        justify-content: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         margin-bottom: 20px;
         padding: 0 14px;
     }
@@ -1008,7 +1048,8 @@ footer{
         display: none;
     }
     .factory ul{
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         padding: 0 30px;
     }
     .proizv-button{
@@ -1047,15 +1088,20 @@ footer{
         border-radius: 5px;
     }
     .about-item{
-        justify-content: flex-start;
-        align-items: center;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         position: relative;
     }
     .about-company{
         padding: 0 15px;
     }
     .about-item img{
-        box-shadow: none;
+        -webkit-box-shadow: none;
+                box-shadow: none;
         border-radius: 5px;
     }
     .gallery-item{
@@ -1153,13 +1199,19 @@ footer{
         position: absolute;
         right: 14px;
         top: 20px;
-        transform: rotate(270deg);
+        -webkit-transform: rotate(270deg);
+            -ms-transform: rotate(270deg);
+                transform: rotate(270deg);
     }
     .footer-header.active ~ .img{
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+            -ms-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
     .footer-content{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .footer-content > div:nth-child(2){
         margin-right: 0px;
@@ -1203,7 +1255,9 @@ footer{
     }
     .first{
         width: 100%;
-        justify-content: flex-start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
     }
     .main-nav .flex{
         height: auto;
@@ -1212,14 +1266,20 @@ footer{
         display: block !important;
     }
     .header-top{
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         padding: 0 14px;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         position: relative;
     }
     .header-top ul{
-        flex-wrap: wrap;
-        justify-content: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .enter{
         margin: 0px 35px 10px 0px;
@@ -1272,7 +1332,9 @@ footer{
         font-size: 16px;
     }
     .mobile-button.active .arrow{
-        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+                transform: rotate(180deg);
     }
     .toggle-text{
         position: absolute;
@@ -1280,7 +1342,9 @@ footer{
         right: -11px;
     }
     .about-text.active + .toggle-text{
-        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+            -ms-transform: rotate(180deg);
+                transform: rotate(180deg);
     }
     .slide-one{
         margin-bottom: 20px;
@@ -1300,6 +1364,8 @@ footer{
         letter-spacing: 0px;
     }
     .content-footer.active + .footer-arrow{
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+            -ms-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 }
