--- a/shapki/css/style.css
+++ b/shapki/css/style.css
@@ -297,7 +297,23 @@ header{
     background-color: #ffffff;
     top: 35px;
     left: -15px;
-    padding: 15px 5px 15px 5px;
+    padding: 0px 5px 15px 5px;
+    -webkit-box-shadow: -1px -8px 8px -2px rgba(0,0,0,0.26);
+    -moz-box-shadow: -1px -8px 8px -2px rgba(0,0,0,0.26);
+    box-shadow: -1px -8px 8px -2px rgba(0,0,0,0.26);
+}
+
+.wrapper-letter{
+    position: relative;
+}
+
+.wrapper-letter::before{
+    content:'';
+    position: absolute;
+    border: 10px solid transparent;
+    border-bottom: 11px solid #ffffff;
+    top: -21px;
+    left: 7px;
 }
 
 .menu{
@@ -365,7 +381,6 @@ header{
 
 .enter{
     margin-left: auto;
-    margin-top: 15px;
     list-style: none;
 }
 
@@ -1282,8 +1297,7 @@ footer{
                 justify-content: center;
     }
     .enter{
-        margin: 0px 35px 10px 0px;
-
+        margin: 0px 35px 0px 0px;
     }
     .header-top ul li{
         margin-right: 37px;
